# Owner-avatar-list-pokemons-server

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
apps/pokemon/: api.py  filters.py  models.py  pokemon_routers.py  schema.py
config/: database.py
migrations/: env.py
migrations/versions/: aa9cbd2759c4_init.py  effc947fa7f7_init.py
scripts/: run_develop.sh
